networks/canary/web-deploy-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      type: canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 30%
  template:
    metadata:
      labels:
        app: web
        type: canary
    spec:
      containers:
        - name: web
          image: petrolnt/web-v1:new
          livenessProbe:
            tcpSocket:
              port: 80
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
