networks/canary/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
    type: current
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
